changes to jinja templates

--- a/templates/rdp_connection.j2
+++ b/templates/rdp_connection.j2
@@ -17,7 +17,7 @@
         "enable-drive": "",
         "enable-full-window-drag": "",
         "security": "rdp encryption",
-        "password": "ansible",
+        "password": "{{ password }}",
         "enable-wallpaper": "",
         "create-drive-path": "",
         "enable-theming": "",
