--- a/templates/ssh_connection.j2
+++ b/templates/ssh_connection.j2
@@ -8,24 +8,24 @@
     "activeConnections": 0,
     "parameters": {
         "port": "22",
-        "enable-menu-animations": "true",
-        "enable-desktop-composition": "true",
+        "enable-menu-animations": "",
+        "enable-desktop-composition": "",
         "hostname": "student{{ item }}.{{ec2_name_prefix}}.{{ domain }}",
-        "color-depth": "32",
-        "enable-font-smoothing": "true",
+        "color-depth": "",
+        "enable-font-smoothing": "",
         "ignore-cert": "true",
-        "enable-drive": "true",
-        "enable-full-window-drag": "true",
-        "security": "any",
-        "password": "ansible",
-        "enable-wallpaper": "true",
-        "create-drive-path": "true",
-        "enable-theming": "true",
+        "enable-drive": "",
+        "enable-full-window-drag": "",
+        "security": "",
+        "password": "{{ password }}",
+        "enable-wallpaper": "",
+        "create-drive-path": "",
+        "enable-theming": "",
         "username": "student{{ item }}",
-        "console": "true",
-        "disable-audio": "true",
+        "console": "",
+        "disable-audio": "",
         "domain": "",
-        "drive-path": "/var/tmp",
+        "drive-path": "",
         "disable-auth": "",
         "server-layout": "",
         "width": "",
